fixed alignment on add plant submit button, added media query for modals

--- a/public/style.css
+++ b/public/style.css
@@ -72,6 +72,12 @@ span > i {
   padding: 10px;
 }
 
+#app-plant-btn {
+  display: block;
+  margin: 0 auto;
+  width: 25%;
+}
+
 .modal-button {
   display: block;
   margin: 20px auto 0 auto;
@@ -87,16 +93,10 @@ span > i {
 }
 
 .modal-close {
-    cursor: pointer;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-}
-
-.modal-button {
-  display: block;
-  margin: 20px auto 0 auto;
-  width: 50%;
+  cursor: pointer;
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
 
 html [type=button] {
@@ -142,6 +142,7 @@ footer {
 }
 
 /*Reminders*/
+
 .reminder-img {
   position: relative!important;
   width: 35px!important;
@@ -235,7 +236,6 @@ footer {
 
 .plantpg-name, .fa-minus-square {
   position: absolute!important;
-  z-index: 100!important;
   top: 5px!important;
 }
 
@@ -417,6 +417,16 @@ label {
 
   .plantpg-img {
     width: 600px;
+  }
+}
+
+@media screen and (max-width: 414px) {
+
+  .ReactModal__Content--after-open {
+    top:5%!important;
+    left:5%!important;
+    right:5%!important;
+    bottom:5%!important;
   }
 }
 
